fixed nav on tablet sized screens

--- a/src/components/styles/Header.module.scss
+++ b/src/components/styles/Header.module.scss
@@ -36,8 +36,10 @@ header {
     nav {
       position: fixed;
       top: 0;
-      width: 100%;
+      width: calc(100% + 2rem);
       transition: 150ms linear;
+      transform: translateX(-50%);
+      margin-left: -2rem;
 
       @media (min-width: 820px) {
         position: unset;
@@ -52,7 +54,7 @@ header {
 
       ul {
         text-align: left;
-        padding: 1em;
+        padding: 1em 3em;
         margin-top: 0;
         box-shadow: 0 0 24px rgba(0, 0, 0, 0.3);
         margin-bottom: 0;
